# happiness

Bismillah/: README.md  docker-compose.yml  start.bat  start.sh
Bismillah/backend/: Cargo.toml  Dockerfile
Bismillah/backend/src/: main.rs
Bismillah/frontend/: index.html  nginx.conf
Bismillah/inference_service/: .dockerignore  Cargo.toml  Dockerfile  README.md
Bismillah/inference_service/examples/: register_model.py
Bismillah/inference_service/migrations/: 001_initial.sql
Bismillah/inference_service/src/: main.rs
Bismillah/python_service/: Dockerfile  main.py  requirements.txt
