[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
ndarray = "0.15"
ndarray-rand = "0.14"
rand = "0.8"
rayon = "1.8"
sysinfo = "0.30"
tokio = { version = "1.37", features = ["full"] }
uuid = { version = "1.7", features = ["v4"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4"
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = "0.20"
base64 = "0.21"
mime = "0.3"
bytes = "1.5"
multer = "3.0"
jsonwebtoken = "9.2"
bcrypt = "0.15"
async-trait = "0.1"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde_urlencoded = "0.7"
urlencoding = "2.1"